plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.15'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = JavaVersion.VERSION_11
	targetCompatibility = JavaVersion.VERSION_11 // Java 11으로 설정
}

bootJar {
	enabled = true // Spring Boot 실행 가능한 JAR 생성 비활성화
}

jar {
	enabled = false // 일반 JAR 생성 활성화
}


configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-logging'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'com.mysql:mysql-connector-j'

	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'

	implementation 'mysql:mysql-connector-java:8.0.33'
	implementation 'org.mapstruct:mapstruct:1.4.2.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5',
			// Uncomment the next line if you want to use RSASSA-PSS (PS256, PS384, PS512) algorithms:
			//'org.bouncycastle:bcprov-jdk15on:1.70',
			'io.jsonwebtoken:jjwt-jackson:0.11.5' // or 'io.jsonwebtoken:jjwt-gson:0.11.5' for gson
	implementation 'com.google.code.gson:gson'
	implementation 'org.hibernate.validator:hibernate-validator:6.2.0.Final'
	implementation 'org.springdoc:springdoc-openapi-ui:1.6.9' // SpringDoc 라이브러리 추가
	implementation 'com.fasterxml.jackson.core:jackson-databind'
	
	implementation 'org.springframework.boot:spring-boot-starter-freemarker' // 다른 뷰 템플릿을 사용하는 경우
	implementation 'org.springframework.boot:spring-boot-starter-mustache' // 다른 뷰 템플릿을 사용하는 경우
	implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'

	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
}

test {
	useJUnitPlatform()
}

